[gd_scene load_steps=2 format=3 uid="uid://benemyserver456"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy_server.gd" id="1_server"]

[node name="EnemyServer" type="Node2D"]
script = ExtResource("1_server")

[node name="Sprite" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(1, 0.647059, 0, 1)

[node name="TypeLabel" type="Label" parent="."]
offset_left = -24.0
offset_top = -8.0
offset_right = 24.0
offset_bottom = 16.0
text = "SRV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.2, 0.2, 0.8)
offset_left = -24.0
offset_top = -36.0
offset_right = 24.0
offset_bottom = -30.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]

[node name="SpecialTimer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]